--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,6 +1,13 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
 
+# A list of environment variables that are available to your application.
+# These variables are created and managed in Google Secret Manager.
+# https://firebase.google.com/docs/app-hosting/configure#secret-vars
+secretEnvironmentVariables:
+- secret: GEMINI_API_KEY
+  key: GEMINI_API_KEY
+
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
