--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
     "build": "next build",
-    "start": "dotenv -e .env next start -p 3606",
+    "start": "next start -p 3606",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
